--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProjetoHotel
+application.vendor=valva
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,35 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ProjetoHotel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.activation.jar=activation.jar
+file.reference.commons-beanutils-1.8.2.jar=commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=commons-digester-2.1.jar
+file.reference.commons-email-1.3.3.jar=commons-email-1.3.3.jar
+file.reference.commons-lang3-3.4-javadoc.jar=commons-lang3-3.4-javadoc.jar
+file.reference.commons-lang3-3.4.jar=commons-lang3-3.4.jar
+file.reference.commons-logging-1.1.jar=commons-logging-1.1.jar
+file.reference.groovy-all-2.0.1.jar=groovy-all-2.0.1.jar
+file.reference.jasperreports-6.1.0.jar=jasperreports-6.1.0.jar
+file.reference.javax.mail-1.5.3.jar=javax.mail-1.5.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.jCalendar.classpath}
+    ${libs.jCalendar.classpath}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-email-1.3.3.jar}:\
+    ${file.reference.commons-lang3-3.4-javadoc.jar}:\
+    ${file.reference.commons-lang3-3.4.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.jasperreports-6.1.0.jar}:\
+    ${file.reference.javax.mail-1.5.3.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +80,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=projeto.login.login
+main.class=projeto.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
