--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,7 +55,8 @@ javac.classpath=\
     ${file.reference.groovy-all-2.0.1.jar}:\
     ${file.reference.jasperreports-6.1.0.jar}:\
     ${file.reference.javax.mail-1.5.3.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
